Fix vertical alignment of navbar buttons

--- a/src/scripts/modules/media/editbar/editbar.less
+++ b/src/scripts/modules/media/editbar/editbar.less
@@ -3,5 +3,9 @@
 .editbar .navbar > .container-fluid {
   > .navbar-collapse {
     height: 1px;
+
+    .navbar-btn {
+      margin-top: 9px; // Override Bootstrap to vertically-align buttons
+    }
   }
 }
